# picture_compressor

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
additional_config/: .djlintrc  NOTE  djlint-pyproject.toml
picture_compressor/: __init__.py  const.py  picture.py  resize.py  shrinker.py
picture_shrinker/: __init__.py  _shrinker_old.py  picture.py  shrinker.py
tests/: conftest.py  test_picture.py
